Fix Hero covering eveerything bug

--- a/app/assets/stylesheets/about/_base.scss
+++ b/app/assets/stylesheets/about/_base.scss
@@ -1,7 +1,3 @@
-section .container {
-  height: 90vh;
-}
-
 #about-top {
   letter-spacing: 0.2rem;
   margin: 0vh auto 0 auto;
@@ -21,6 +17,7 @@ section .container {
     color: #a5a5a5;
   }
   .container {
+    height: 90vh;
     .section-header {
       border-bottom: 1px #a5a5a5 solid;
     }
