--- a/app/assets/stylesheets/about/responsive/mobile/_index.scss
+++ b/app/assets/stylesheets/about/responsive/mobile/_index.scss
@@ -1,9 +1,6 @@
-section .container {
-  height: initial;
-}
-
 #about-top {
   .container {
+    height: initial;
     letter-spacing: 0.1rem;
     #sub-name-header {
       font-size: 0.9rem;
